@@ -217,6 +217,11 @@
       <p><a href="tao/ciao/tools/config_handlers/index.html">Config Handlers:</a> CIAO's
       Config Handlers.</p>
     </li>
+
+    <li>
+      <p><a href="tao/ciao/dds4ccm/index.html">DDS4CCM:</a> CIAO's
+      Config Handlers.</p>
+    </li>
   </ul>
 </body>
 </html>
